# server/src/api/backoffice/animal/animals.routes.ts
@@ -1,16 +1,19 @@
 // LIBS
 import { Router } from 'express';
 
-// VALIDATORS
-import { isBackoffice } from '../../../middlewares/permissions/isBackoffice';
-
 // FUNCTIONS
 import { createAnimal } from './controllers/create';
+import { createActionHistory } from './controllers/createActionHistory';
+import { dashBoardAnimalActionHistory } from './controllers/dashBoardAnimalActionHistory';
 import { animalsList } from './controllers/list';
 
 // ROUTES
 export const animalRouter = Router();
 
-animalRouter.post('/create', isBackoffice, createAnimal);
-// animalRouter.get('/list', isBackoffice, animalsList);
+animalRouter.post('/create', createAnimal);
+
+animalRouter.post('/create/action', createActionHistory);
+
+animalRouter.get('/dashboard', dashBoardAnimalActionHistory);
+
 animalRouter.get('/list', animalsList);
