# server/src/api/backoffice/animal/services/animalServices.ts
@@ -1,8 +1,12 @@
 import { prisma } from '../../../../utils/prismaClient';
-import { ICreateAnimal, ICreateAnimalHistory } from './types';
+import {
+  ICreateAnimal,
+  ICreateAnimalActionHistory,
+  ICreateAnimalHistory,
+} from './types';
 
 export class AnimalServices {
-  // ANIMALS
+  // #region ANIMALS
   async create({ breedId, genderId }: ICreateAnimal) {
     return prisma.animal.create({
       data: {
@@ -23,11 +27,144 @@ export class AnimalServices {
     });
   }
 
-  async listAnimals() {
-    return prisma.animal.findMany();
+  // #endregion
+
+  // #region FINDS
+  async findAnimalbyId({ animalId }: { animalId: string }) {
+    return prisma.animal.findFirst({
+      select: {
+        AnimalActionHistory: {
+          select: {
+            id: true,
+            endTime: true,
+          },
+          where: {
+            endTime: null,
+          },
+        },
+      },
+
+      where: {
+        id: animalId,
+      },
+    });
+  }
+  // #endregion
+
+  // #region ACTIONS
+  async createActionHistory({
+    animalId,
+    localId,
+    animalActionId,
+    startTime,
+  }: ICreateAnimalActionHistory) {
+    await prisma.animalActionHistory.create({
+      data: {
+        animalId,
+        localId,
+        animalActionId,
+        startTime,
+      },
+    });
   }
 
-  // GENDERS
+  async updateActionHistory({
+    animalActionHistoryId,
+  }: {
+    animalActionHistoryId: string;
+  }) {
+    await prisma.animalActionHistory.update({
+      data: {
+        endTime: new Date(),
+      },
+      where: {
+        id: animalActionHistoryId,
+      },
+    });
+  }
+  // #endregion
+
+  // #region LIST
+  async listAnimals() {
+    return prisma.animal.findMany({
+      select: {
+        id: true,
+        Breed: {
+          select: {
+            name: true,
+          },
+        },
+        Gender: {
+          select: {
+            name: true,
+          },
+        },
+        AnimalHistory: {
+          select: {
+            age: true,
+            image: true,
+            weight: true,
+          },
+        },
+        AnimalActionHistory: {
+          select: {
+            Local: {
+              select: {
+                name: true,
+              },
+            },
+            AnimalAction: {
+              select: {
+                name: true,
+              },
+            },
+            startTime: true,
+            endTime: true,
+          },
+        },
+      },
+    });
+  }
+
+  async listAnimalsActions() {
+    return prisma.animalActionHistory.findMany({
+      select: {
+        startTime: true,
+        endTime: true,
+        Animal: {
+          select: {
+            Breed: {
+              select: {
+                id: true,
+                name: true,
+              },
+            },
+
+            Gender: {
+              select: {
+                id: true,
+                name: true,
+              },
+            },
+          },
+        },
+
+        Local: {
+          select: {
+            id: true,
+            name: true,
+          },
+        },
+      },
+      orderBy: {
+        createdAt: 'asc',
+      },
+    });
+  }
+
+  // #endregion
+
+  // #region GENDERS AND BREEDS
   async findGenderByName({ name }: { name: 'Macho' | 'Femea' }) {
     return prisma.gender.findFirst({
       where: {
@@ -40,4 +177,5 @@ export class AnimalServices {
   async listBreeds() {
     return prisma.breed.findMany();
   }
+  // #endregion
 }
